dalsie zmeny a upravy
